# e-nowshop-api-order

./: Jenkinsfile  requirements.txt
cid/: deployments.yaml  service.yaml
src/: .python-version  Makefile  app.py  config.py  exception.py  index.html  payload-1.json  pyproject.toml  requirements.txt
src/enowshop/: helpers.py
src/enowshop/domain/: noql_models.py
src/enowshop/domain/correios/: client.py
src/enowshop/endpoints/: dependecies.py
src/enowshop/endpoints/cars/: controller.py  repository.py  schema.py  service.py
src/enowshop/endpoints/orders/: callback_mp.json  controller.py  repository.py  schema.py  service.py
src/enowshop/endpoints/quotes/: controller.py  repository.py  schema.py  service.py
src/enowshop/infrastructure/: container.py
src/enowshop/infrastructure/cache/: redis.py
src/enowshop/infrastructure/database/: nosql.py
src/enowshop/infrastructure/repositories/: base_repository.py  nosql_repository.py
