[tool.poetry]
name = "e-noewshop-orders"
version = "0.1.0"
description = ""
authors = ["gustavodanielsw <gustavodanieldetoledo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
dependency-injector = "^4.41.0"
pydantic = "^1.10.4"
asyncpg = "^0.26.0"
e-nowshop-models = {path = "/home/gustavo/Projects/e-nowshop/e-nowshop-models"}
python-dotenv = "^0.21.0"
PyQRCode = "^1.2.1"
pypng = "^0.20220715.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
