[tool.poetry]
name = "e-noewshop-orders"
version = "0.1.0"
description = ""
authors = ["gustavodanielsw <gustavodanieldetoledo@gmail.com>"]

[[tool.poetry.source]]
name = "pvtSource"
url = "http://44.211.201.219:8080"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
dependency-injector = "^4.41.0"
pydantic = "^1.10.4"
asyncpg = "^0.26.0"
python-dotenv = "^0.21.0"
PyQRCode = "^1.2.1"
pypng = "^0.20220715.0"
motor = "^3.1.1"
aioredis = "^2.0.1"
odmantic = "^0.9.2"
httpx = "^0.23.3"
zeep = "^4.2.1"

enowshop-models = {version = "0.4.33", source = "pvtSource"}
enowshop-payment = {version = "0.1.4", source = "pvtSource"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
